# silent-meeting-copilot

./: .env.example  .gitignore  .vercelignore  PROGRESS.md  README.md  ROADMAP.md  SKILL-APPLICATION.md  middleware.js  next.config.mjs  package-lock.json  package.json  report-job-smcbot-2.md  report-job-smcbot-3.md  report-job-smcbot-4.md  report-job-smcsec-1.md  report-job-smcsec-2.md  report-job-smcsec-3.md  report-job-smcsec-4.md  requirements-spike.txt  requirements.txt  vercel.json
app/: calm-overrides.css  globals.css  layout.js  page.js
bot/: README.md  SPEC-session-integration-v1.md  package.json  run-bot.sh
bot/adapter/: CMakeLists.txt  join_bot.cpp
docs/: FABLE_ABSORPTION.md  FRAMEWORK.md  PROJECT_DOSSIER_FOR_FABLE_REVIEW.md  SPEC-commercial-phase2-cockpit.md  SPEC-commercial-phase3-metering.md  ai-data-processing.md  coaching-rearchitecture-proposal.md  interview-mode-codex-review-20260624.md  interview-mode-design.md  key-rotation.md  meeting-bot-design.md  recall-integration.md  retention-policy.md  sarvam-integration-plan-20260628.md  security-codex-review-20260625.md  security-framework.md  status-20260705-gate1b.md  status-20260712-commercial-web-slices.md  worker2-cutover-runbook.md  zoom-bot-gate1a-findings.md
helper/: README.md  index.html  main.js  package.json  pcm16k-worklet.js  preload.js  renderer.js
helper-spike/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js
public/: pcm16k-worklet.js
scripts/: benchmark-audio-accuracy.mjs  migrate.mjs  purge-retention.mjs  sarvam-batch.py  test-assist.mjs  (+19 more)
(+156 files in other folders)
