cmake_minimum_required(VERSION 3.16)
project(smc_auth_smoke CXX)
set(CMAKE_CXX_STANDARD 17)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GLIB REQUIRED glib-2.0)
add_executable(auth_smoke main.cpp)
target_include_directories(auth_smoke PRIVATE $ENV{HOME}/smc-bot/sdk/h ${GLIB_INCLUDE_DIRS})
target_link_directories(auth_smoke PRIVATE $ENV{HOME}/smc-bot/sdk)
target_link_libraries(auth_smoke meetingsdk GL EGL ${GLIB_LIBRARIES})
set_target_properties(auth_smoke PROPERTIES BUILD_RPATH $ENV{HOME}/smc-bot/sdk)
add_executable(join_bot join_bot.cpp)
target_include_directories(join_bot PRIVATE $ENV{HOME}/smc-bot/sdk/h ${GLIB_INCLUDE_DIRS})
target_link_directories(join_bot PRIVATE $ENV{HOME}/smc-bot/sdk)
target_link_libraries(join_bot meetingsdk GL EGL ${GLIB_LIBRARIES})
set_target_properties(join_bot PROPERTIES BUILD_RPATH $ENV{HOME}/smc-bot/sdk)
